--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<form method="post" action="proses.html">
+<form method="post" action="proses.php">
 
 Nama: <input type="text" name="nama">
 
